--- a/app/views/followers/new.html.slim
+++ b/app/views/followers/new.html.slim
@@ -1,8 +1,8 @@
 h1 Create Follower Account
 
-= form_for :follower, as: :post, url: follower_signup_path() do |f|
-  = f.label :username
-  = f.text_field :username
+= form_for :follower, as: :post, url: followers_create_path() do |f|
+  = f.label :user_name
+  = f.text_field :user_name
   br
   = f.label :password
   = f.password_field :password
