--- a/app/views/traders/new.html.slim
+++ b/app/views/traders/new.html.slim
@@ -1,14 +1,14 @@
 h1 Create Trader Account
 
-= form_for :trader, as: :post, url: trader_signup_path() do |f|
-  = f.label :username
-  = f.text_field :username
+= form_for :trader, as: :post, url: traders_create_path() do |f|
+  = f.label :user_name
+  = f.text_field :user_name
   br
   = f.label :password
   = f.password_field :password
   br
-  = f.label :confirm_password
-  = f.password_field :password
+  = f.label :password_confirmation
+  = f.password_field :password_confirmation
   br
   = f.label :email
   = f.text_field :email
