--- a/app/views/followers/new.html.slim
+++ b/app/views/followers/new.html.slim
@@ -1,30 +1,31 @@
-h1 Create Follower Account
-- if flash[:error]
-  = flash[:error]
+div.maincontent
+  h1 Create Follower Account
+  - if flash[:error]
+    = flash[:error]
 
-= form_for :follower, as: :post, url: followers_create_path() do |f|
-  = f.label :user_name
-  - if flash[:field_error] && flash[:field_error][:user_name]
-    = f.text_field :user_name
-    = flash[:field_error][:user_name]
-  - else
-    = f.text_field :user_name
-  br
-  = f.label :password
-  - if flash[:field_error] && flash[:feild_error][:password]
-    = f.password_field :password
-    = flash[:feild_error][:password]
-  - else
-    = f.password_field :password
-  br
-  = f.label :confirm_password
-  = f.password_field :password_confirmation
-  br
-  = f.label :email
-  - if flash[:field_error] && flash[:field_error][:email]
-    = f.text_field :email
-    = flash[:field_error][:email]
-  - else
-    = f.text_field :email
-  br
-  = f.submit 'Signup'
+  = form_for :follower, as: :post, url: followers_create_path() do |f|
+    = f.label :user_name
+    - if flash[:field_error] && flash[:field_error][:user_name]
+      = f.text_field :user_name
+      = flash[:field_error][:user_name]
+    - else
+      = f.text_field :user_name
+    br
+    = f.label :password
+    - if flash[:field_error] && flash[:feild_error][:password]
+      = f.password_field :password
+      = flash[:feild_error][:password]
+    - else
+      = f.password_field :password
+    br
+    = f.label :confirm_password
+    = f.password_field :password_confirmation
+    br
+    = f.label :email
+    - if flash[:field_error] && flash[:field_error][:email]
+      = f.text_field :email
+      = flash[:field_error][:email]
+    - else
+      = f.text_field :email
+    br
+    = f.submit 'Signup'
