--- a/app/views/followers/index.html.slim
+++ b/app/views/followers/index.html.slim
@@ -1,1 +1,20 @@
-h1 Welcome = @user.user_name
+h1 #{@user.user_name}你好！
+= link_to "登出", logout_path
+p
+  = link_to "首页(目前登陆后首页的逻辑是跳转到本页)", root_path
+  br
+  = link_to "我的主页"
+  br
+  = link_to "排行榜"
+p
+
+
+p
+  = link_to "跟随者"
+  br
+  = link_to "历史记录"
+  br
+  = link_to "设置"
+p
+
+| 推荐高手
