--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,9 @@
       <div class="nav">
         <div class="menu">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Services</a></li>
-            <li><a href="/">Faq's</a></li>
-            <li><a href="/">Contacts</a></li>
+            <li><a href="/">主页</a></li>
+            <li><a href="/">联系我们</a></li>
+            <li><a href="/">登出</a></li>
           </ul>
         </div>
       </div>
