--- a/app/views/layouts/trader.html.erb
+++ b/app/views/layouts/trader.html.erb
@@ -26,6 +26,9 @@
     </div>
     <div class="mainmenu">
       <ul>
+        <li><div>策略提供者</div></li>
+        <li><%= link_to '历史记录', '/'%></li>
+        <li class="float-right"><%= link_to '设置', '/'%></li>
       </ul>
     </div>
     <%= yield %>
