--- a/app/views/layouts/follower.html.erb
+++ b/app/views/layouts/follower.html.erb
@@ -26,6 +26,10 @@
     </div>
     <div class="mainmenu">
       <ul>
+        <li><div>普通用户</div></li>
+        <li><%= link_to '历史记录', '/'%></li>
+        <li><%= link_to '排行榜', '/'%></li>
+        <li class="float-right"><%= link_to '设置', '/'%></li>
       </ul>
     </div>
     <%= yield %>
