--- a/app/views/followers/index.html.slim
+++ b/app/views/followers/index.html.slim
@@ -5,7 +5,7 @@ p
   br
   = link_to "我的主页"
   br
-  = link_to "排行榜"
+  = link_to "排行榜", followers_ranking_list_path
 p
 
 
@@ -17,4 +17,20 @@ p
   = link_to "设置"
 p
 
-| 推荐高手
+| 推荐高手 (共有
+=@all_traders.count
+| 位策略提供者)
+table#recommend_list
+  thead
+    tr
+      th 用户名
+      th 账户净值
+      th 浮动盈亏
+      th 还需要啥？
+  tbody
+    - @all_traders.each do |trader|
+      tr
+        td= link_to "#{trader[:user_name]}"
+        td= trader[:equity]
+        td= trader[:profit]
+        td= trader[:user_name]
