--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -258,21 +258,25 @@ body{margin:0;padding:0}
     margin-right: auto;
     width:930px;
 }
-.hotels{
-    position:relative;
-    float:left;
-    width:293px;
+
+.page-content {
+    width: 930px;
+    position: relative;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 0 20px 0;
 }
-.rest{
-    position:relative;
-    float:left;
-    margin-left:25px;
+.page-content .title {
+    width: 60px;
+    background-color:#fdec37;
 }
-.news{
+
+.page-content .content-body {
+    padding: 9px 9px 9px 9px;
+    background-color:#fefe90;
+    display:inline;
     position:relative;
-    float:left;
-    margin-left:25px;
 }
+
 .title{
     width:268px;
     height:39px;
