add some displaying item / sort the traders on follower's index page

--- a/app/views/followers/index.html.slim
+++ b/app/views/followers/index.html.slim
@@ -1,6 +1,6 @@
 div.page-content
   div.title
-    #{@user.user_name}
+    =@user.user_name
   div.content-body
     |
       Hello World!
@@ -42,7 +42,7 @@ p
 
 p
 | 推荐高手 (共有
-  =@all_traders.count
+=@all_traders.count
 | 位策略提供者)
 
 table#recommend_list
