--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -267,14 +267,26 @@ body{margin:0;padding:0}
 }
 .page-content .title {
     width: 60px;
+    height: auto;
     background-color:#fdec37;
+    padding: 9px 9px 9px 9px;
 }
 
 .page-content .content-body {
+    width: 920px;
+    height: auto;
     padding: 9px 9px 9px 9px;
     background-color:#fefe90;
-    display:inline;
-    position:relative;
+}
+
+.page-content .figure {
+    width: 150px;
+    height: 150px;
+    float: right;
+    margin: 0px 10px 0px 10px;
+    padding: 10px 10px 10px 10px;
+    display: inline;
+    background-color:#fdec37;
 }
 
 .title{
