add button followship

--- a/app/views/followers/index.html.slim
+++ b/app/views/followers/index.html.slim
@@ -41,9 +41,10 @@ br
 p
 
 p
-| 推荐高手 (共有
-=@all_traders.count
-| 位策略提供者)
+| 推荐高手
+//| (共有
+//  =@all_traders.count
+//| 位策略提供者)
 
 table#recommend_list
   thead
@@ -55,7 +56,7 @@ table#recommend_list
     tbody
       - @all_traders.each do |trader|
         tr
-          td= link_to "#{trader[:user_name]}"
+          td= link_to "#{trader[:user_name]}", traders_show_for_follower_path(:trader_id => trader[:trader_id])
           td= trader[:equity]
           td= trader[:profit]
           td= trader[:user_name]
