--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,14 +34,14 @@ body{margin:0;padding:0}
     margin-right: auto;
     background:#FFF;
     width:980px;
+    padding-bottom: 20px;
 }
 
 
 .footermenu {
-    margin-left: auto;
-    margin-right: auto;
     width:980px;
     height:60px;
+    padding: 10px 20px 10px 20px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -256,14 +256,15 @@ body{margin:0;padding:0}
 .maincontent{
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 20px;
     width:930px;
 }
 
 .page-content {
     width: 930px;
     position: relative;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 0 20px 0;
+    padding: 0px 20px 0px 20px;
+    margin: 20px 0 0 0;
 }
 .page-content .title {
     width: 920px;
@@ -282,7 +283,6 @@ body{margin:0;padding:0}
     height: auto;
     padding: 9px 9px 9px 9px;
     background-color:#fefe90;
-    clear: both;
 }
 
 .page-content .text {
@@ -317,43 +317,7 @@ body{margin:0;padding:0}
     position:relative;
     padding-top:35px;
 }
-.hotelimg{
-    position:relative;
-    float:left;}
-.hoteltext{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:12px;
-    line-height:1.5;
-    color:#7c7475;
-    position:relative;
-    float:left;
-    padding-left:20px;
-    width:165px; }
-.hoteltext1{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:12px;
-    line-height:1.5;
-    color:#7c7475;
-    position:relative;
-    float:left;
-    width:250px;
- }
-.hoteltext a{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:12px;
-    color:#eca208;
-}
-.hoteltext1 a{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:12px;
-    color:#eca208;
-}
-.hoteltext a:hover{
-    text-decoration:none;
-}
-.hoteltext1 a:hover{
-    text-decoration:none;
-}
+
 .text1{
     color:#bebebe;
     font-family:Arial, Helvetica, sans-serif;
