--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,7 @@
       </div>
     </div>
     <div class="mainmenu">
-      <ul>
-      </ul>
+      <%= yield(:mainmenu) if content_for?(:mainmenu)%>
     </div>
     <%= yield %>
   </div>
