--- a/app/views/traders/index.html.slim
+++ b/app/views/traders/index.html.slim
@@ -1,11 +1,18 @@
-h1 #{@user.user_name}你好！
-= link_to "登出", logout_path
-p
-  = link_to "首页(目前登陆后首页的逻辑是跳转到本页)", root_path
-  br
-  = link_to "我的主页"
-  br
-  = link_to "排行榜"
-p
+div.page-content
+  div.title
+    span
+      =@user.user_name
+  div.content-body
+    div.figure
+    div.figure
+    div.figure
+    div.text
+      h3 #{@user.user_name} 你好！
+    div.clear
 
-| 交易记录
+div.page-content
+  div.title
+    span
+      | 交易记录
+  div.content-body
+    | 暂时没有记录
