--- a/app/views/traders/show_for_follower.html.slim
+++ b/app/views/traders/show_for_follower.html.slim
@@ -1,4 +1,4 @@
 h1 策略提供者：#{@trader.user_name}
 
 
-= button_to '我要跟单', followship_create_path(:trader_id => @trader._id), :method => :post, :confirm => "确定要跟随#{@trader.user_name}?"
+= button_to '我要跟单', followships_create_path(:trader_id => @trader._id), :method => :post, :confirm => "确定要跟随#{@trader.user_name}?"
