fixed bug in follower index page

--- a/app/views/layouts/follower.html.erb
+++ b/app/views/layouts/follower.html.erb
@@ -1,6 +1,7 @@
 <% content_for :mainmenu do %>
 <ul>
   <li><div>普通用户</div></li>
+  <li><%= link_to '跟单情况', '/'%></li>
   <li><%= link_to '历史记录', '/'%></li>
   <li><%= link_to '排行榜', '/'%></li>
   <li class="float-right"><%= link_to '设置', '/'%></li>
