moved ranking_list to trader controller

--- a/app/views/layouts/follower.html.erb
+++ b/app/views/layouts/follower.html.erb
@@ -3,7 +3,7 @@
   <li><div>普通用户</div></li>
   <li><%= link_to '跟单情况', '/'%></li>
   <li><%= link_to '历史记录', '/'%></li>
-  <li><%= link_to '排行榜', '/'%></li>
+  <li><%= link_to '排行榜', traders_ranking_list_path%></li>
   <li class="float-right"><%= link_to '设置', '/'%></li>
 </ul>
 <% end %>
