--- a/app/views/followers/index.html.slim
+++ b/app/views/followers/index.html.slim
@@ -27,17 +27,4 @@ div.page-content
     span
       | 推荐高手
   div.content-body
-    table#recommend_list
-      thead
-        tr
-          th 用户名
-          th 账户净值
-          th 浮动盈亏
-          th 还需要啥？
-      tbody
-        - @all_traders.each do |trader|
-          tr
-            td= link_to "#{trader[:user_name]}", traders_show_for_follower_path(:trader_id => trader[:trader_id])
-            td= trader[:equity]
-            td= trader[:profit]
-            td= trader[:user_name]
+    = render 'traders/best_traders', locals: {best_traders: @best_traders, user: @user}
