--- a/app/views/followers/index.html.slim
+++ b/app/views/followers/index.html.slim
@@ -4,13 +4,19 @@ div.page-content
       =@user.user_name
   div.content-body
     div.figure
-      | 收益：#{@my_gain}
+      | 收益：
+      br
+      | #{@my_gain}
     div.figure
-      | 账户净值：#{@my_equity}
+      | 账户净值：
+      br
+      | #{@my_equity}
     div.figure
-      | 浮动盈亏：#{@my_profit}
+      | 浮动盈亏：
+      br
+      | #{@my_profit}
     div.text
-      h3 #{@user.user_name}你好！
+      h3 #{@user.user_name} 你好！
       | 收益率：#{@my_profit_rate}
       - if @trader
         br
