--- a/app/views/layouts/follower.html.erb
+++ b/app/views/layouts/follower.html.erb
@@ -1,8 +1,8 @@
 <% content_for :mainmenu do %>
 <ul>
   <li><div>普通用户</div></li>
-  <li><%= link_to '跟单情况', '/'%></li>
-  <li><%= link_to '历史记录', '/'%></li>
+  <li><%= link_to '跟单情况', followers_followship_path(@user)%></li>
+  <li><%= link_to '历史记录', followers_history_path(@user)%></li>
   <li><%= link_to '排行榜', followers_best_traders_path%></li>
   <li class="float-right"><%= link_to '设置', followers_settings_page_path(@user) %></li>
 </ul>
