--- a/app/views/layouts/trader.html.erb
+++ b/app/views/layouts/trader.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <li><div>策略提供者</div></li>
   <li><%= link_to '历史记录', '/'%></li>
-  <li class="float-right"><%= link_to '设置', '/'%></li>
+  <li class="float-right"><%= link_to '设置', traders_settings_page_path(@user) %></li>
 </ul>
 <% end %>
 <%= render template: "layouts/application" %>
