--- a/app/views/followers/settings.html.slim
+++ b/app/views/followers/settings.html.slim
@@ -30,6 +30,12 @@ div.page-content
     span
       | 绑定交易账户
   div.content-body
+    - if @user.account
+      | 当前已绑定账号：
+      = @user.account.account_number
+    - else
+      | 当前未绑定帐号：
+    p
     == form_tag followers_bind_account_path(@user), method: 'post' do
       = hidden_field_tag :user_type, value: :follower
       = label :trade_account, '交易账户名'
