--- a/app/views/followers/history.html.slim
+++ b/app/views/followers/history.html.slim
@@ -4,6 +4,9 @@ div.page-content
       | 交易历史
   div.content-body
     = flash[:error]
+    
+    embed height="530" src="http://s2.4399.com:8080/4399swf/upload_swf/ftp/20100409zhong/1.swf" width="910" wmode="transparent"
+
     table
       thead
         tr
