--- a/app/views/followers/register_trade_account.html.slim
+++ b/app/views/followers/register_trade_account.html.slim
@@ -8,7 +8,8 @@ div.page-content
     - if flash[:field_error]
       = flash[:field_error]
     p
-    | 已提交的身份证扫描件
+    - if @user.idcard.url
+      | 已提交的身份证扫描件
     p
       = @user.idcard.url
     p
