--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,40 +1,80 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>汇星</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<div class="main">
-  <div class="black"></div>
-  <div class="content">
-    <div class="height"></div>
-    <div class="header">
-      <div class="logo"></div>
-      <div class="nav">
-        <div class="menu">
-          <ul>
-            <li><a href="/">首页</a></li>
-            <li><a href="/">我的主页</a></li>
-            <li><a href="/">联系我们</a></li>
-            <li><a href="/logout">登出</a></li>
-          </ul>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>汇星</title>
+        <%= stylesheet_link_tag    "bootstrap", media: "all", "data-turbolinks-track" => true %>
+        <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    </head>
+    <body>
+        <div class="container">
+        <div class="row">
+            <div class="banner">
+                <div class="col-md-6">
+                    <img src="/assets/LOGO.png" class="logo">
+                </div>
+            </div>
+            
         </div>
-      </div>
-    </div>
-    <div class="mainmenu">
-      <%= yield(:mainmenu) if content_for?(:mainmenu)%>
-    </div>
-    <%= yield %>
-  </div>
-  <div class="mainfooter">
-  </div>
-  <div class="footermenu">
-    <div class="v">汇星 © 2010</div>
-  </div>
-</div>
+        <div class="row">
+            <div class="col-md-4">
 
-</body>
+                <div class="row avatar">
+
+                    <%= image_tag "avatar.jpg"  %>
+
+                </div>
+                 <div class="row avatar">
+
+                    <img src="/assets/avatar.jpg"></img>
+
+                </div>
+                 <div class="row avatar">
+
+                    <img src="/assets/avatar.jpg"></img>
+
+                </div>
+                
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                
+                    <form class="form-signin" role="form">
+                        <input type="text" class="form-control" placeholder="邮箱/用户名" required autofocus>
+                        <input type="password" class="form-control" placeholder="密码" required>
+                        <label class="checkbox">
+                            <input type="checkbox" value="remember-me">记住我
+                        </label>
+                        <div class="right">
+
+                            <a href="http://www.google.com">忘记密码</a>
+                        </div>
+                    <button class="btn btn-lg btn-block" type="submit">登 录</button>
+                    </form>
+
+                    <div>
+                        <button class="btn btn-lg btn-no-account btn-block">还没有汇星账号？</button>
+                    </div>
+
+                
+            </div>
+        </div>
+        <div class="row center foot">
+            <a href="">联系我们</a>
+            |
+            <a href=""> 帮助 </a>
+            |
+            <a href="">组织结构</a>
+            |
+            <a href="">如有问题</a>
+
+        </div>
+
+    </div>
+         
+    </body>
 </html>
